frontend/test/should_pass/exact_001.grg
exact rule r {
	pattern {
	}
	replace {
	}
}

