frontend/test/should_fail/inh_attrib_006.grg
using inh_attrib_model_006;

rule r {
	pattern {
	}
	replace {
	}
}

